--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AI Server</title>
+    <title>{{title}}</title>
 </head>
 <body>
 <h1>인공지능 서버 입니다.</h1>
